fonts and images added

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
 /* Paul Irish Box-Sizing: Border-Box reset - apply a natural box layout model to all elements, but allowing components to change http://www.paulirish.com/2012/box-sizing-border-box-ftw/ */
 html {
-  box-sizing: border-box;
+box-sizing: border-box;
 }
 *, *:before, *:after {
-  box-sizing: inherit;
+box-sizing: inherit;
 }
 /**
- * Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
- * http://cssreset.com
- */
+* Eric Meyer's Reset CSS v2.0 (http://meyerweb.com/eric/tools/css/reset/)
+* http://cssreset.com
+*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -18,111 +18,187 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
+margin: 0;
+padding: 0;
+border: 0;
+font-size: 100%;
+font: inherit;
+vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
-    display: block;
+display: block;
 }
 body {
-    line-height: 1;
+line-height: 1;
 }
 ol, ul {
-    list-style: none;
+list-style: none;
 }
 /* End of Reset */
-
 /* Navigation Section */
 .content {
-    margin: 0 auto;
-    width: 970px;
-    padding: 0 100px;
+margin: 0 auto;
+width: 970px;
+padding: 0 100px;
 }
 /* Navigation Section */
 .top-navigation {
-    background-color: #fff;
+background-color: #fff;
+position: fixed;
+width: 100%;
+z-index: 9999;
 }
 .top-navigation > .content {
-    margin: 0 auto;
-    width: 970px;
-    height: 70px;
+margin: 0 auto;
+width: 970px;
+height: 70px;
 }
-
 .top-navigation .logo {
-    height: 70px;
+height: 70px;
 }
 .top-navigation .links {
-    float: right;
-    font-family: 'Roboto', sans-serif;
-    color: #838994;
-    font-size: 16px;
-    margin-top: 25px;
-    -webkit-font-smoothing: antialiased;
+float: right;
+font-family: 'Roboto', sans-serif;
+color: #838994;
+font-size: 16px;
+margin-top: 25px;
+-webkit-font-smoothing: antialiased;
 }
 .top-navigation .links li {
-    display: inline-block;
-    margin-left: 25px;
+display: inline-block;
+margin-left: 25px;
 }
 .top-navigation .links .active {
-    color: #4c5058;
-    font-weight: 500;
+color: #4c5058;
+font-weight: 500;
 }
 .top-navigation .links li:hover {
-    cursor: pointer;
-    color: #333333;
+cursor: pointer;
+color: #333333;
 }
 .introduction{
-	background-image: url('../images/first-background.jpg');
-	background-position: center bottom;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 45.938rem;
-	overflow: auto;
+font-family: 'Roboto', sans-serif;
+background-image: url('../images/first-background.jpg');
+background-position: center bottom;
+background-repeat: no-repeat;
+background-size: cover;
+height: 45.938rem;
+overflow: auto;
+-webkit-font-smoothing: antialiased;
 }
 .introduction h1 {
 margin-top: 17.5rem;
 font-size: 3.125rem;
+letter-spacing: 0.2rem;
 }
 .introduction h1, .introduction h3 {
+font-family: 'Roboto', sans-serif;
 color: white;
 text-align: center;
 font-weight: 300;
+}
+.introduction h3 {
+margin-top: 1.5rem;
+letter-spacing: .15rem;
+font-size: 1.563rem;
 }
 .buttons {
 margin-top: 1.56rem;
 }
 .big-button {
-	width: 9.68rem;
-	background-color: #f15a29;
-	border-color: #f15a29; 
-	font-size: 1.125rem;
-	margin: 0 auto;
-	color: white;
-	display: block;
-    text-shadow: none;
-    border-style: none;
-    border-radius: 4px;
-    padding: 16px 26px;
-    line-height: 1.33;
+width: 9.68rem;
+background-color: #f15a29;
+border-color: #f15a29;
+font-size: 1.125rem;
+margin: 0 auto;
+color: white;
+display: block;
+text-shadow: none;
+border-style: none;
+border-radius: 4px;
+padding: 16px 26px;
+line-height: 1.33;
+letter-spacing: 0.055rem;
 }
 .big-button: hover {
-	background-color: #d9400e;
-	cursor: pointer;
+background-color: #d9400e;
+cursor: pointer;
 }
-
-
-
-
-
-
-
+.cases {
+margin-top: 7rem;
+font-family: 'Roboto', sans-serif;
+-webkit-font-smoothing: antialiased;
+padding-bottom: 5rem;
+overflow: hidden;
+}
+.cases h2{
+font-size: 2.75rem;
+letter-spacing: 0.2rem;
+text-align: center;
+font-weight: 300;
+margin: 1.65rem 0 4rem 3.125rem;
+}
+.cases li{
+width: 33.3333333%;
+float: left;
+text-align: center;
+}
+.devices img{
+width: 127px;
+height: 127px;
+margin-left: 20px;
+}
+.devices .caption{
+margin: 2.5rem 0 1.875rem;
+font-size: 1.57rem;
+font-weight: 400;
+}
+.social {
+font-family: 'Roboto', sans-serif;
+-webkit-font-smoothing: antialiased;
+padding: 2rem 0 4rem 0;
+text-align: center;
+overflow: hidden;
+}
+.social hr{
+border-top: 1px #eaebec;
+margin: 1.313rem 0;
+}
+.social ul{
+	text-align: center;
+margin-left: 17.5rem;
+padding-bottom: 5rem;}
+.social .icons > li {
+border-radius: 1.25rem;
+width: 2.5rem;
+height: 2.5rem;
+float: left;
+margin: 1.25rem 1rem;
+border: 1px solid #eaebec;
+padding: 0.65rem 0;
+text-align: center;
+}
+.social .icons > li: hover {
+cursor: pointer;
+}
+.social .copy{
+font-size: 0.9rem;
+font-weight: 300;
+color: #838994;
+}
+}
+.social .twitter {
+color: #55acee;
+}
+.social .facebook {
+color: #4c66a4;
+}
+.social .instagram {
+color: #3f729b;
+}
